# NCRN

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: deploy.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
web/: env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.vue
web/src/components/: DLPDemo.vue  DLPPipelineView.vue  LLMDemo.vue  OpenAIDemo.vue  WasmDemo.vue
web/src/dlp/: DLPService.ts  Detector.ts  Policy.ts  Redactor.ts  Reinjector.ts  Vault.ts  index.ts  patterns.ts  types.ts
web/src/llm/: LLMService.ts  index.ts  types.ts
web/src/openai/: OpenAIService.ts  index.ts  types.ts
web/src/plugins/: vuetify.ts
web/src/wasm/: WasmBridge.ts  index.ts
