[package]
name = "core"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]   # rlib enables native unit tests alongside wasm target

[dependencies]
utils = { path = "../utils" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
